--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,14 +1,6 @@
-{% load static %}
+{% extends "base.html" %}
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>learning Django</title>
-    <link rel="stylesheet" href="{%static 'style.css'%}" />
-  </head>
-  <body>
-    <h1>Welcome to Django/about</h1>
-  </body>
-</html>
+{% block title %}About page{% endblock %}
+{% block content %}
+<h1>Welcome to about page</h1>
+{% endblock %}
