--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,14 +1,4 @@
-{% load static %}
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>learning Django</title>
-    <link rel="stylesheet" href="{%static 'style.css'%}" />
-  </head>
-  <body>
-    <h1>Welcome to Django</h1>
-  </body>
-</html>
+{% extends "base.html" %} {% block title %}Home page{% endblock %} {% block
+content %}
+<h1>Welcome to Home page</h1>
+{% endblock %}
