--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,7 @@
-{% extends "base.html" %} {% block title %}Home page{% endblock %} {% block
-content %}
+{% extends "base.html" %} 
+
+{% block title %}Home page{% endblock %} 
+
+{% block content %}
 <h1>Welcome to Home page</h1>
 {% endblock %}
