configured tailwind & admin panel

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,5 +3,5 @@
 {% block title %}Home page{% endblock %} 
 
 {% block content %}
-<h1>Welcome to Home page</h1>
+<h1 class="text-center text-3xl bg-blue-500 font-semibold hover:text-green-200" >Welcome to Home page</h1>
 {% endblock %}
